# vault-ci

./: .gitignore  README.md  pyproject.toml  requirements.txt
tests/: test_cli.py  test_crypto.py  test_generate.py  test_storage.py  test_vault_service.py
vault/: cli.py  clipboard.py  config.py  crypto.py  exceptions.py  models.py  prompts.py  storage.py  utils.py
vault/commands/: add.py  backup.py  change_password.py  copy.py  delete.py  edit.py  generate.py  get.py  init.py  list.py  search.py
vault/services/: __init__.py  vault_service.py
